# IR_with_ESM

./: README.md  pyproject.toml
IR_with_ESM/: __init__.py
IR_with_ESM/ir/: infrared_with_ESM.py
IR_with_ESM/utils/: analysis.py  plot.py
examples/CO_on_Cu111_in_1M-KOH/: analysis.py  check.traj  err  helmholtz  infrared_with_ESM-RISM.txt  out  run.sh  slab-relax.traj  vib-run.py
examples/CO_on_Cu111_in_1M-KOH/DFT/: espresso.pwi  espresso.pwo
examples/CO_on_Cu111_in_1M-KOH/ir/: cache.-1x+.json  cache.-1x-.json  cache.-1y+.json  cache.-1y-.json  cache.-1z+.json  cache.-1z-.json  cache.-2x+.json  cache.-2x-.json  cache.-2y+.json  cache.-2y-.json  cache.-2z+.json  cache.-2z-.json  cache.eq.json
examples/CO_on_Cu111_in_1M-KOH/output/: dipole.txt
examples/h2o_in_1M-KOH/: check.traj  err  helmholtz  infrared_with_ESM-RISM.txt  out  relaxed.pwo  run.sh  vib-run.py
examples/h2o_in_1M-KOH/DFT/: espresso.pwi  espresso.pwo
examples/h2o_in_1M-KOH/ir/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0y-.json  cache.0z+.json  cache.0z-.json  cache.1x+.json  cache.1x-.json  cache.1y+.json  cache.1y-.json  cache.1z+.json  cache.1z-.json  cache.2x+.json  cache.2x-.json  cache.2y+.json  cache.2y-.json  cache.2z+.json  cache.2z-.json  cache.eq.json
examples/h2o_in_1M-KOH/output/: dipole.txt
examples/h2o_in_vacuum/: check.traj  h2o-nonRISM.xyz  helmholtz  infrared_with_ESM.txt  out  relaxed.pwo  run.sh  vib-run.py
examples/h2o_in_vacuum/DFT/: espresso.pwi  espresso.pwo
examples/h2o_in_vacuum/ir/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0y-.json  (+15 more)
(+207 files in other folders)
